objects/Lead_Agei__c.object
<CustomObject>
    <description>Tracking the Lead Owner Change</description>
    <label>Lead Aging Track</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Lead Aging Track Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Aging Track</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Lead Aging Track</relationshipLabel>
        <relationshipName>Lead_Aging_Track</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sl_No__c</fullName>
        <label>Sl No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <label>Lead Owner Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity__c</fullName>
        <description>Captures the event that created the record. An example is &quot;Value of Lead Status Changed&quot;.</description>
        <label>Activity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Displays the number of hours that the Lead had the Previous Value for until the Activity occurred. For example, if the Activity was &quot;Value of Lead Status Changed&quot; and the Previous Value was &quot;Open&quot;, then the Duration could be 5 hours. Durations are rounded (up or down) to the nearest hour.</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>In_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Age__c</fullName>
        <label>Age in Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <description>Holds the current value of the changed field at the time of the record creation.</description>
        <label>New Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>Lead Owner O</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modified_By__c</fullName>
        <label>Modified By</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Previous_Value__c</fullName>
        <description>The value of a field before the Activity occurred. For example, if the Activity was &quot;Value of Lead Status Changed&quot;, then the Previous Value could be &quot;Open&quot;, if the Lead Status field changed from &quot;Open&quot; to &quot;Working&quot;.</description>
        <label>Previous Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Type__c</fullName>
        <label>Lead Owner Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Name1__c</fullName>
        <formula>IF( In_Queue__c=FALSE,HYPERLINK(&quot;../&quot; + User_Id__c ,  User_Name__c , &quot;_self&quot;),HYPERLINK(&quot;../p/own/Queue/d?id=&quot; + User_Id__c ,  User_Name__c , &quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Owner</label>
        <type>Text</type>
    </fields>
</CustomObject>